// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateNursingTasksSlider should close the slider on click of cancel button when no changes are made 1`] = `
<div>
  <div
    class="side-bar-nav"
  >
    <div
      class="side-bar-header"
    >
      <div>
        Task(s)
      </div>
      <div
        class="close-icon"
      >
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-_r_7a_"
              class="cds--btn cds--btn--ghost cds--btn--icon-only"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-_r_7a_"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="side-bar-children"
    >
      <div
        class="update-nursing-tasks"
      >
        <div
          class="task-heading"
        >
          Scheduled for
          <test-file-stub />
          08:00
        </div>
        <div
          class="nursing-task-section"
        >
          <div
            class="cds--toggle"
          >
            <button
              aria-checked="false"
              class="cds--toggle__button"
              data-testid="done-toggle"
              id="d9ae1992-63ac-4e05-8dfb-13f021102ec6"
              role="switch"
              type="button"
            />
            <div
              class="cds--toggle__label"
              for="d9ae1992-63ac-4e05-8dfb-13f021102ec6"
              id="d9ae1992-63ac-4e05-8dfb-13f021102ec6_label"
            >
              <div
                class="cds--toggle__appearance cds--toggle__appearance--sm"
              >
                <div
                  class="cds--toggle__switch"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--toggle__check"
                    focusable="false"
                    height="5px"
                    viewBox="0 0 6 5"
                    width="6px"
                  >
                    <path
                      d="M2.2 2.7L5 0 6 1 2.2 5 0 2.7 1 1.5z"
                    />
                  </svg>
                </div>
                <span
                  aria-hidden="true"
                  class="cds--toggle__text"
                  dir="auto"
                >
                  <div>
                    Done
                     
                  </div>
                </span>
              </div>
            </div>
          </div>
          <div
            class="medication-name"
          >
            <div
              class="name undefined"
            >
              Amoxicillin/Clavulanic Acid  125 mg/31.25 mg/5 mL Powder for Oral Suspension
            </div>
            <div
              class="cds--tag cds--tag--sm cds--layout--size-sm cds--tag--blue"
              id="tag-id-_r_7d_"
            >
              <span
                class="cds--tag__label"
                dir="auto"
                title="Rx"
              >
                Rx
              </span>
            </div>
          </div>
          <div
            class="task-details"
          >
            <span>
              30mg
            </span>
            <span>
               - 
              Topical
            </span>
          </div>
          <span
            class="cds--overflow-menu__wrapper"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-labelledby="tooltip-_r_7f_"
                  class="overflowMenu cds--overflow-menu cds--btn cds--btn--ghost cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-label="Options"
                    class="cds--overflow-menu__icon"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="16"
                      cy="8"
                      r="2"
                    />
                    <circle
                      cx="16"
                      cy="16"
                      r="2"
                    />
                    <circle
                      cx="16"
                      cy="24"
                      r="2"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_7f_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Options
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </span>
        </div>
        <div
          class="nursing-task-section"
        >
          <div
            class="cds--toggle cds--toggle--disabled"
          >
            <button
              aria-checked="false"
              class="cds--toggle__button"
              data-testid="done-toggle"
              disabled=""
              id="b9904678-eb07-4eb0-8d03-53fcaa1d20d0"
              role="switch"
              type="button"
            />
            <div
              class="cds--toggle__label"
              for="b9904678-eb07-4eb0-8d03-53fcaa1d20d0"
              id="b9904678-eb07-4eb0-8d03-53fcaa1d20d0_label"
            >
              <div
                class="cds--toggle__appearance cds--toggle__appearance--sm"
              >
                <div
                  class="cds--toggle__switch"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--toggle__check"
                    focusable="false"
                    height="5px"
                    viewBox="0 0 6 5"
                    width="6px"
                  >
                    <path
                      d="M2.2 2.7L5 0 6 1 2.2 5 0 2.7 1 1.5z"
                    />
                  </svg>
                </div>
                <span
                  aria-hidden="true"
                  class="cds--toggle__text"
                  dir="auto"
                >
                  <div>
                    Done
                     
                  </div>
                </span>
              </div>
            </div>
          </div>
          <div
            class="medication-name"
          >
            <div
              class="name undefined"
            >
              Sodium Chloride 0.9% (1 L) Infusion Bag (Normal Saline)
            </div>
            <div
              class="cds--tag cds--tag--sm cds--layout--size-sm cds--tag--blue"
              id="tag-id-_r_7i_"
            >
              <span
                class="cds--tag__label"
                dir="auto"
                title="Rx"
              >
                Rx
              </span>
            </div>
          </div>
          <div
            class="task-details"
          >
            <span>
              25mg
            </span>
            <span>
               - 
              Intravenous
            </span>
          </div>
          <span
            class="cds--overflow-menu__wrapper"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-labelledby="tooltip-_r_7k_"
                  class="overflowMenu cds--overflow-menu cds--btn cds--btn--ghost cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-label="Options"
                    class="cds--overflow-menu__icon"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="16"
                      cy="8"
                      r="2"
                    />
                    <circle
                      cx="16"
                      cy="16"
                      r="2"
                    />
                    <circle
                      cx="16"
                      cy="24"
                      r="2"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_7k_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Options
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </span>
        </div>
      </div>
      <div
        class="cds--layer-one cds--modal cds--modal-tall"
        role="presentation"
      >
        <span
          class="cds--visually-hidden"
          role="link"
          tabindex="0"
        >
          Focus sentinel
        </span>
        <div
          aria-modal="true"
          class="cds--modal-container"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="cds--modal-header"
          >
            <h2
              class="cds--modal-header__heading"
              dir="auto"
              id="cds--modal-header__heading--modal-id-_r_7o_"
            >
              Please confirm your nursing tasks
            </h2>
            <div
              class="cds--modal-close-button"
            >
              <span
                class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
              >
                <div
                  class="cds--tooltip-trigger__wrapper"
                >
                  <button
                    aria-label="Close"
                    aria-labelledby="tooltip-_r_7q_"
                    class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="cds--modal-close__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                      />
                    </svg>
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="cds--popover"
                  id="tooltip-_r_7q_"
                  role="tooltip"
                >
                  <span
                    class="cds--popover-content cds--tooltip-content"
                  >
                    Close
                  </span>
                  <span
                    class="cds--popover-caret"
                  />
                </span>
              </span>
            </div>
          </div>
          <div
            class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
            id="cds--modal-body--modal-id-_r_7o_"
          >
            <hr />
            <div
              aria-label="Structured list section"
              class="cds--structured-list administered-list-body"
              role="table"
            >
              <div
                class="cds--structured-list-tbody"
                role="rowgroup"
              />
            </div>
          </div>
          <div
            aria-busy="false"
            class="cds--modal-footer cds--btn-set"
          >
            <button
              class="cds--btn cds--btn--secondary"
              type="button"
            >
              Cancel
            </button>
            <button
              class="cds--btn cds--btn--primary"
              type="button"
            >
              Save
            </button>
          </div>
        </div>
        <span
          class="cds--visually-hidden"
          role="link"
          tabindex="0"
        >
          Focus sentinel
        </span>
      </div>
      <div
        class="footer"
      >
        <button
          class="cancel-button-slider cds--btn cds--btn--secondary"
          data-testid="cancel"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="save-button-slider cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`UpdateNursingTasksSlider should render UpdateNursingTasksSlider 1`] = `
<div>
  <div
    class="side-bar-nav"
  >
    <div
      class="side-bar-header"
    >
      <div>
        Task(s)
      </div>
      <div
        class="close-icon"
      >
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-_r_1_"
              class="cds--btn cds--btn--ghost cds--btn--icon-only"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-_r_1_"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="side-bar-children"
    >
      <div
        class="update-nursing-tasks"
      >
        <div
          class="task-heading"
        >
          Scheduled for
          <test-file-stub />
          08:00
        </div>
        <div
          class="nursing-task-section"
        >
          <div
            class="cds--toggle"
          >
            <button
              aria-checked="false"
              class="cds--toggle__button"
              data-testid="done-toggle"
              id="d9ae1992-63ac-4e05-8dfb-13f021102ec6"
              role="switch"
              type="button"
            />
            <div
              class="cds--toggle__label"
              for="d9ae1992-63ac-4e05-8dfb-13f021102ec6"
              id="d9ae1992-63ac-4e05-8dfb-13f021102ec6_label"
            >
              <div
                class="cds--toggle__appearance cds--toggle__appearance--sm"
              >
                <div
                  class="cds--toggle__switch"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--toggle__check"
                    focusable="false"
                    height="5px"
                    viewBox="0 0 6 5"
                    width="6px"
                  >
                    <path
                      d="M2.2 2.7L5 0 6 1 2.2 5 0 2.7 1 1.5z"
                    />
                  </svg>
                </div>
                <span
                  aria-hidden="true"
                  class="cds--toggle__text"
                  dir="auto"
                >
                  <div>
                    Done
                     
                  </div>
                </span>
              </div>
            </div>
          </div>
          <div
            class="medication-name"
          >
            <div
              class="name undefined"
            >
              Amoxicillin/Clavulanic Acid  125 mg/31.25 mg/5 mL Powder for Oral Suspension
            </div>
            <div
              class="cds--tag cds--tag--sm cds--layout--size-sm cds--tag--blue"
              id="tag-id-_r_4_"
            >
              <span
                class="cds--tag__label"
                dir="auto"
                title="Rx"
              >
                Rx
              </span>
            </div>
          </div>
          <div
            class="task-details"
          >
            <span>
              30mg
            </span>
            <span>
               - 
              Topical
            </span>
          </div>
          <span
            class="cds--overflow-menu__wrapper"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-labelledby="tooltip-_r_6_"
                  class="overflowMenu cds--overflow-menu cds--btn cds--btn--ghost cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-label="Options"
                    class="cds--overflow-menu__icon"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="16"
                      cy="8"
                      r="2"
                    />
                    <circle
                      cx="16"
                      cy="16"
                      r="2"
                    />
                    <circle
                      cx="16"
                      cy="24"
                      r="2"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_6_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Options
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </span>
        </div>
        <div
          class="nursing-task-section"
        >
          <div
            class="cds--toggle cds--toggle--disabled"
          >
            <button
              aria-checked="false"
              class="cds--toggle__button"
              data-testid="done-toggle"
              disabled=""
              id="b9904678-eb07-4eb0-8d03-53fcaa1d20d0"
              role="switch"
              type="button"
            />
            <div
              class="cds--toggle__label"
              for="b9904678-eb07-4eb0-8d03-53fcaa1d20d0"
              id="b9904678-eb07-4eb0-8d03-53fcaa1d20d0_label"
            >
              <div
                class="cds--toggle__appearance cds--toggle__appearance--sm"
              >
                <div
                  class="cds--toggle__switch"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--toggle__check"
                    focusable="false"
                    height="5px"
                    viewBox="0 0 6 5"
                    width="6px"
                  >
                    <path
                      d="M2.2 2.7L5 0 6 1 2.2 5 0 2.7 1 1.5z"
                    />
                  </svg>
                </div>
                <span
                  aria-hidden="true"
                  class="cds--toggle__text"
                  dir="auto"
                >
                  <div>
                    Done
                     
                  </div>
                </span>
              </div>
            </div>
          </div>
          <div
            class="medication-name"
          >
            <div
              class="name undefined"
            >
              Sodium Chloride 0.9% (1 L) Infusion Bag (Normal Saline)
            </div>
            <div
              class="cds--tag cds--tag--sm cds--layout--size-sm cds--tag--blue"
              id="tag-id-_r_9_"
            >
              <span
                class="cds--tag__label"
                dir="auto"
                title="Rx"
              >
                Rx
              </span>
            </div>
          </div>
          <div
            class="task-details"
          >
            <span>
              25mg
            </span>
            <span>
               - 
              Intravenous
            </span>
          </div>
          <span
            class="cds--overflow-menu__wrapper"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-labelledby="tooltip-_r_b_"
                  class="overflowMenu cds--overflow-menu cds--btn cds--btn--ghost cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-label="Options"
                    class="cds--overflow-menu__icon"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="16"
                      cy="8"
                      r="2"
                    />
                    <circle
                      cx="16"
                      cy="16"
                      r="2"
                    />
                    <circle
                      cx="16"
                      cy="24"
                      r="2"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_b_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Options
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </span>
        </div>
      </div>
      <div
        class="cds--layer-one cds--modal cds--modal-tall"
        role="presentation"
      >
        <span
          class="cds--visually-hidden"
          role="link"
          tabindex="0"
        >
          Focus sentinel
        </span>
        <div
          aria-modal="true"
          class="cds--modal-container"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="cds--modal-header"
          >
            <h2
              class="cds--modal-header__heading"
              dir="auto"
              id="cds--modal-header__heading--modal-id-_r_f_"
            >
              Please confirm your nursing tasks
            </h2>
            <div
              class="cds--modal-close-button"
            >
              <span
                class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
              >
                <div
                  class="cds--tooltip-trigger__wrapper"
                >
                  <button
                    aria-label="Close"
                    aria-labelledby="tooltip-_r_h_"
                    class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="cds--modal-close__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                      />
                    </svg>
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="cds--popover"
                  id="tooltip-_r_h_"
                  role="tooltip"
                >
                  <span
                    class="cds--popover-content cds--tooltip-content"
                  >
                    Close
                  </span>
                  <span
                    class="cds--popover-caret"
                  />
                </span>
              </span>
            </div>
          </div>
          <div
            class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
            id="cds--modal-body--modal-id-_r_f_"
          >
            <hr />
            <div
              aria-label="Structured list section"
              class="cds--structured-list administered-list-body"
              role="table"
            >
              <div
                class="cds--structured-list-tbody"
                role="rowgroup"
              />
            </div>
          </div>
          <div
            aria-busy="false"
            class="cds--modal-footer cds--btn-set"
          >
            <button
              class="cds--btn cds--btn--secondary"
              type="button"
            >
              Cancel
            </button>
            <button
              class="cds--btn cds--btn--primary"
              type="button"
            >
              Save
            </button>
          </div>
        </div>
        <span
          class="cds--visually-hidden"
          role="link"
          tabindex="0"
        >
          Focus sentinel
        </span>
      </div>
      <div
        class="footer"
      >
        <button
          class="cancel-button-slider cds--btn cds--btn--secondary"
          data-testid="cancel"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="save-button-slider cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;
